minor tweaks still aggressively meh

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
       <section class="content">
         <details>
           <summary>data collection/organization</summary>
-          <p>I am a nerd. Fight me.</p>
+          <span>I am a nerd. Fight me.</span>
         </details>
         <details>
           <summary>pokemon</summary>
           <!-- * fix ugly indent -->
-          <p>
+          <span>
             It's 7d rock-paper-scissors and 22d chess wrapped in a fiesta of
             semi-sentient animal MMA. I love it.
-          </p>
+          </span>
         </details>
         <details>
           <summary>dogs</summary>
