--- a/Capstone/Portal/HOME/_templates/index.html
+++ b/Capstone/Portal/HOME/_templates/index.html
@@ -6,11 +6,11 @@
       <!-- display navlinks based upon whether the
                 user is logged in or not -->
       {% if user.is_authenticated %} Welcome,
-      <a href="#"> {{user.username}} </a>
-      <a href="#"> Logout </a>
+      <a href="{% url 'portal:user_profile' %}"> {{user.username}} </a>
+      <a href="{% url 'portal:logout' %}"> Logout </a>
       {% else %}
-      <a href="#"> Login </a>
-      <a href="#"> Register </a>
+      <a href="{% url 'portal:login' %}"> Login </a>
+      <a href="{% url 'portal:register' %}"> Register </a>
       {% endif %}
     </span>
   </header>
@@ -22,10 +22,10 @@
     <!-- when a link is clicked the block will
                 replace links with form -->
     {% block forms %} {% if user.is_authenticated %}
-    <a href="#"> Profile </a>
+    <a href="{% url 'portal:home' %}"> Enter Portal </a>
     {% else %}
-    <a href="#"> Login </a>
-    <a href="#"> Register </a>
+    <a href="{% url 'portal:login' %}"> Login </a>
+    <a href="{% url 'portal:register' %}"> Register </a>
     {% endif %} {% endblock %} {% endblock %}
   </main>
   <footer class="m-2 p-1 text-center">
