--- a/Capstone/Portal/PATRONS/_templates/profile.html
+++ b/Capstone/Portal/PATRONS/_templates/profile.html
@@ -1,31 +1,36 @@
 {% extends 'index.html' %} {% block profile %}
 <div class="container">
   <div class="row">
-    <h1>Profile</h1>
-    <div class="col"></div>
-    <div class="col-8">
-      <a href="{% url 'user:update' %}">
-        change login information
-        <i class="fas fa-edit"></i>
+    <div class="col">
+      <a href="{% url 'portal:home' %}">
+        <i class="fas fa-home"></i>
       </a>
-      <h1>{{user.display_name}}</h1>
-      <div class="d-flex flex-column align-items-start">
-        <span>{{user.first_name.title}} {{user.last_name.title}}</span>
-      </div>
-
-      {% if user.is_superuser %}
+    </div>
+    <div class="col-8">
+      <h1>Profile</h1>
       <div class="d-flex flex-column align-items-center">
+        <span>{{user.first_name.title}} {{user.last_name.title}}</span>
+        <span>{{user.email}}</span>
+        {% if user.is_superuser %}
         <a href="http://127.0.0.1:8000/admin/"> admin tools </a>
-        <a href="{% url 'patrons:view' %}"> View Patrons </a>
-        <button class="btn-dark">
-          <a href="{% url 'patrons:new' %}"> Add Patron </a>
-        </button>
+        {% else %}
+        <!--  -->
+        {% if user.unlimited %}
+        <span>tokens: unlimited</span>
+        {% else %}
+        <span>tokens: {{user.tokens}}</span>
+        {% endif %}
+        <!--  -->
+        {% endif %}
+        <a href="{% url 'portal:update_login' %}">
+          change login information
+          <i class="fas fa-edit"></i>
+        </a>
+        <a href="{% url 'portal:update_profile' %}">
+          update profile information
+          <i class="fas fa-edit"></i>
+        </a>
       </div>
-      {% else %} {% if user.unlimited %}
-      <span>tokens: unlimited</span>
-      {% else %}
-      <span>tokens: {{user.wallet}}</span>
-      {% endif %} {% endif %}
     </div>
     <div class="col"></div>
   </div>
