--- a/Capstone/Portal/PATRONS/_templates/profile.html
+++ b/Capstone/Portal/PATRONS/_templates/profile.html
@@ -12,6 +12,7 @@
 
       <div class="d-flex flex-column align-items-center">
         <span>{{user.first_name.title}} {{user.last_name.title}}</span>
+        <a href="{% url 'relay:invoke' %}">new invocation</a>
         {% if user.is_superuser %}
         <a href="http://127.0.0.1:8000/admin/"> admin tools </a>
         {% else %}
