implemented fav-color and link toggle

--- a/Capstone/Portal/HOME/_templates/index.html
+++ b/Capstone/Portal/HOME/_templates/index.html
@@ -32,6 +32,8 @@
     {% endif %} {% endblock %} {% endblock %}
   </main>
   <footer class="m-2 p-1 text-center">
+    <a href="{% url 'portal:toggle_color' %}">toggle favorite color</a>
+
     <h6>&copy;2022 Austen C. Myers</h6>
   </footer>
 </div>
