--- a/Capstone/Portal/_assets/_templates/base.html
+++ b/Capstone/Portal/_assets/_templates/base.html
@@ -22,6 +22,32 @@
     <title>Atlas Electronica</title>
   </head>
   <body>
-    {% block index %} {% endblock %}
+    {% if user.is_authenticated %}
+    <span class="visually-hidden" id="fav-color">{{user.favorite_color}}</span>
+    <span class="visually-hidden" id="use-color"
+      >{{user.use_favorite_color}}</span
+    >
+    <!--  -->
+    {% endif %}
+    <!--  -->
+    {% block index %}
+    <!--  -->
+    {% endblock %}
+    <script>
+      const useColor = document.getElementById("use-color").innerText;
+      console.log(useColor);
+      if (useColor === "True") {
+        const color = document.getElementById("fav-color").innerText;
+        console.log(color);
+        const links = document.getElementsByTagName("a");
+        setColors(links, color);
+        console.log(links);
+      }
+      function setColors(elements, color) {
+        for (let i = 0; i < elements.length; i++) {
+          elements.item(i).style.color = color;
+        }
+      }
+    </script>
   </body>
 </html>
