--- a/Capstone/Portal/PATRONS/_templates/profile.html
+++ b/Capstone/Portal/PATRONS/_templates/profile.html
@@ -12,35 +12,35 @@
 
       <div class="d-flex flex-column align-items-center">
         <span>{{user.first_name.title}} {{user.last_name.title}}</span>
-        <a href="{% url 'relay:invoke' %}">new invocation</a>
-        {% if user.is_superuser %}
-        <a href="http://127.0.0.1:8000/admin/"> admin tools </a>
-        {% else %}
-        <!--  -->
         {% if user.unlimited %}
         <span>tokens: unlimited</span>
         {% else %}
         <span>tokens: {{user.tokens}}</span>
-        {% endif %}
         <!--  -->
         {% endif %}
         <div class="row">
           <div class="col d-flex flex-column align-items-center">
             <h6><u>account information</u></h6>
             <span>{{user.username}}</span>
-            <a href="{% url 'portal:update_login' %}">
-              change login information
-            </a>
           </div>
           <div class="col d-flex flex-column align-items-center">
             <h6><u>user profile</u></h6>
             <span>{{user.email}}</span>
-            <a href="{% url 'portal:update_profile' %}"> update profile </a>
           </div>
         </div>
       </div>
     </div>
-    <div class="col"></div>
+    <div class="col d-flex flex-column align-items-start">
+      <h3>actions</h3>
+      {% if user.is_superuser %}
+      <a href="http://127.0.0.1:1994/admin/">admin tools</a>
+      <a href="{% url 'portal:new_patron' %}">new patron</a>
+      {% endif %}
+      <a href="{% url 'portal:view_patrons' %}">view patrons</a>
+      <a href="{% url 'portal:update_login' %}">update login</a>
+      <a href="{% url 'relay:invoke' %}">new invocation</a>
+      <a href="{% url 'portal:update_profile' %}">update profile</a>
+    </div>
   </div>
 </div>
 
