--- a/Capstone/Portal/_assets/_templates/base.html
+++ b/Capstone/Portal/_assets/_templates/base.html
@@ -33,18 +33,7 @@
     {% block index %}
     <!--  -->
     {% endblock %}
-    <script>
-      const useColor = document.getElementById("use-color").innerText;
-      if (useColor === "True") {
-        const color = document.getElementById("fav-color").innerText;
-        const links = document.getElementsByTagName("a");
-        setColors(links, color);
-      }
-      function setColors(elements, color) {
-        for (let i = 0; i < elements.length; i++) {
-          elements.item(i).style.color = color;
-        }
-      }
-    </script>
+
+    <script src="{% static 'theme.js' %}"></script>
   </body>
 </html>
