--- a/Capstone/Portal/HOME/_templates/index.html
+++ b/Capstone/Portal/HOME/_templates/index.html
@@ -1,15 +1,14 @@
 {% extends 'base.html' %} {% block index %}
-<div class="content m-2 p-4">
-  <header class="d-flex align-items-center justify-content-between">
+<div id="block-index" class="m-2 p-4">
+  <header id="header" class="d-flex align-items-center justify-content-between">
     <h1>
-      <a href="{% url 'home:index' %}" class="home-link"> Atlas Electronica </a>
+      <a id="site-title" href="{% url 'home:index' %}"> Atlas Electronica </a>
     </h1>
 
     <span class="d-flex align-items-center gap-2">
       <!-- display navlinks based upon whether the
                 user is logged in or not -->
-      {% if user.is_authenticated %} Welcome,
-      <a href="{% url 'portal:user_profile' %}"> {{user.username}} </a>
+      {% if user.is_authenticated %}
       <a href="{% url 'portal:logout' %}"> Logout </a>
       {% else %}
       <a href="{% url 'portal:login' %}"> Login </a>
@@ -17,21 +16,23 @@
       {% endif %}
     </span>
   </header>
-  <main class="d-flex flex-column m-2 p-2 text-center">
+  <main id="main" class="d-flex flex-column align-items-center m-2 p-2">
     <!-- links and forms will be removed when user is
             logged in and navigates to profile -->
     {% block profile%}
-    <h4 class="">Patron Portal</h4>
+    <h4>Patron Portal</h4>
     <!-- when a link is clicked the block will
                 replace links with form -->
-    {% block forms %} {% if user.is_authenticated %}
+    {% block forms %}
+    <!--  -->
+    {% if user.is_authenticated %}
     <a href="{% url 'portal:home' %}"> Enter Portal </a>
     {% else %}
     <a href="{% url 'portal:login' %}"> Login </a>
     <a href="{% url 'portal:register' %}"> Register </a>
     {% endif %} {% endblock %} {% endblock %}
   </main>
-  <footer class="m-2 p-1 text-center">
+  <footer id="footer" class="m-2 p-1 text-center">
     {% if user.is_authenticated %}
     <a href="{% url 'portal:toggle_color' %}">toggle favorite color</a>
 
