--- a/Capstone/Portal/PATRONS/_templates/forms.html
+++ b/Capstone/Portal/PATRONS/_templates/forms.html
@@ -1,9 +1,9 @@
 {% extends 'index.html' %} {% block forms %}
 <div class="container">
-  <div class="row">
+  <div class="row text-center">
     <h1>{{form_title.title}}</h1>
-    <div class="col"></div>
-    <div class="col">
+    <div class="col-md"></div>
+    <div class="col-md-6 d-flex flex-column align-items-center">
       {% if message %}
       <h4>{{message}}</h4>
       {% endif %} {% if errors %}
@@ -15,7 +15,7 @@
       {% endif %}
       <!--  -->
       <form
-        class="d-flex flex-column align-items-center p-3"
+        class="d-flex flex-column align-items-center p-3 w-75"
         action="{% url url %}"
         method="post"
       >
@@ -26,7 +26,7 @@
         <button type="submit" class="btn-dark m-1">{{form_title}}</button>
       </form>
     </div>
-    <div class="col"></div>
+    <div class="col-md"></div>
   </div>
 </div>
 
