--- a/Capstone/Portal/PATRONS/_templates/update/login.html
+++ b/Capstone/Portal/PATRONS/_templates/update/login.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %} {% block forms %}
 <div class="container">
-  <div class="row">
+  <div class="row text-center">
     <h1>{{form_title.title}}</h1>
     <div class="col"></div>
     <div class="col">
